# Cadence

./: .env.example  .gitignore  CLAUDE.md  README.md  SECURITY.md  drizzle.config.ts  package.json  tsconfig.base.json
.githooks/: pre-commit
docs/: agent-prompts.md  backlog.md  build-plan.md  build-prompt.md  claude-code-control-surfaces.md  claude-interaction-handling.md  execution-flow-hardening.md  phase-6-plan.md  phase-6-prompt.md  platform-definition.md  tauri-build-plan.md  tauri-build-prompt.md  tauri-wrap.md
scripts/: app-smoke.ts  build-sidecar.ts  sidecar-smoke.ts
server/: package.json
server/drizzle/: 0000_charming_pete_wisdom.sql  0001_tasks_fts.sql  0002_glorious_banshee.sql  0003_sloppy_echo.sql  0004_neat_guardian.sql  0005_moaning_carnage.sql  0006_slim_preak.sql  0008_dazzling_ma_gnuci.sql  0009_nosy_tarot.sql  0010_numerous_rockslide.sql  0011_narrow_wither.sql  0012_green_the_order.sql
server/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  0011_snapshot.json  0012_snapshot.json  _journal.json
server/scripts/: capture-prompt-fixtures.ts
server/src/: activity.test.ts  activity.ts  analytics.test.ts  analytics.ts  api.ts  approvals.test.ts  approvals.ts  claude-env.test.ts  claude-env.ts  context.test.ts  context.ts  deps.test.ts  deps.ts  digest.test.ts  digest.ts  events.ts  fleets.test.ts  fleets.ts  forge-review.test.ts  forge-review.ts  forge.test.ts  forge.ts  gateway.test.ts  gateway.ts  git-context.test.ts  git-context.ts  heal.test.ts  heal.ts  import.test.ts  import.ts  index.ts  lifecycle.test.ts  lifecycle.ts  liveness.test.ts  liveness.ts  memory.test.ts  memory.ts  notify.test.ts  notify.ts  ops.test.ts  (+43 more)
server/src/agents/: ask-gate.test.ts  ask-gate.ts  backend.test.ts  backend.ts  delivery-forge.test.ts  delivery.test.ts  delivery.ts  discovery.test.ts  discovery.ts  fleet.test.ts  fleet.ts  implementer.test.ts  implementer.ts  interactive.test.ts  interactive.ts  library.test.ts  library.ts  planner.test.ts  planner.ts  prompt-overrides.test.ts  prompt-snapshots.test.ts  prompts.ts  questioner.test.ts  questioner.ts  recording-runner.test.ts  recording-runner.ts  reflector.test.ts  reflector.ts  review-agents.test.ts  review-responder.ts  reviewer.ts  runner.test.ts  runner.ts  sdk-runner.test.ts  sdk-runner.ts  stage-guard.test.ts  stage-guard.ts  triage.test.ts  triage.ts  verifier.test.ts  (+3 more)
server/src/db/: client.ts  db.test.ts  migrate.ts  schema.ts  search.test.ts  search.ts
shared/: package.json  tsconfig.json
shared/src/: index.test.ts  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/lib/: ws.ts  (+17 more)
(+109 files in other folders)
