[package]
name = "app"
version = "0.1.0"
description = "Cadence — native desktop shell (supervises the Bun gateway sidecar)"
authors = ["Cadence"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# POSIX signal handling so the app terminates cleanly (killing the sidecar) on SIGTERM/SIGINT — the
# in-app RunEvent path doesn't cover an external `kill`/Ctrl-C. Unix-only (the target platforms here).
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

# The `test` feature unlocks tauri::test's headless MockRuntime — only for `cargo test`, never the
# release build. macOS has no WKWebView WebDriver, so the supervisor logic is unit-tested here.
[dev-dependencies]
tauri = { version = "2.11.2", features = ["test"] }
